--- a/style.css
+++ b/style.css
@@ -82,7 +82,8 @@ html, body{
     position:absolute;
     width:100%;
     height:100%;
-    object-fit:cover;
+    object-fit:contain; /* tidak kepotong */
+    background:black;
     opacity:0;
     transition:opacity 1s;
 }
