--- a/style.css
+++ b/style.css
@@ -82,8 +82,7 @@ html, body{
     position:absolute;
     width:100%;
     height:100%;
-    object-fit:contain; /* tidak kepotong */
-    background:black;
+    object-fit:cover;
     opacity:0;
     transition:opacity 1s;
 }
