--- a/style.css
+++ b/style.css
@@ -80,11 +80,14 @@ html, body{
 
 .slide{
     position:absolute;
+    top:0;
+    left:0;
     width:100%;
     height:100%;
-    object-fit:cover;
+    object-fit:cover; /* full layar */
+    object-position:center;
     opacity:0;
-    transition:opacity 1s;
+    transition:opacity 1.5s ease-in-out;
 }
 
 .slide.active{
