--- a/style.css
+++ b/style.css
@@ -59,13 +59,15 @@ html, body{
     font-size:60px;
 }
 
-.opening-box button{
-    padding:10px 25px;
+.opening button{
+    padding:12px 40px;
     border:none;
-    background:white;
-    color:black;
+    border-radius:50px;
+    background:linear-gradient(45deg,#ff416c,#ff4b2b);
+    color:white;
+    font-size:16px;
     cursor:pointer;
-    border-radius:20px;
+    transition:0.4s;
 }
 
 /* SLIDESHOW */
